--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -1,29 +1,19 @@
+<html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<h1>Pytomation Web</h1>
-Objects:
-<div id='devices'></div>
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+<script src="js/device_grid.js"></script>
 <script>
-$.getJSON('api/devices', function(data) {
-  var items = [];
- 
-  $.each(data, function(key, val) {
-    items.push('<li id="' + key + '">' + val + '</li>');
-  });
-  
-  $('<ul/>', {
-    'class': 'my-new-list',
-    html: items.join('')
-  }).appendTo('body');
+$().ready(function(){
+reload_device_grid();
 });
-/*
-$.ajax({
-  dataType: "json",
-  url: "/api/devices",
-  context: document.body,
-  type: 'GET',
-}).done(function( data ) {
-$('div#devices').html(data);
-});
-*/
 </script>
+<body>
+<h1>Pytomation Web</h1>
+Devices
+<table id='tableDevices' class='table table-striped table-bordered table-hover table-condensed'>
+<thead><th>Device name</th><th>State</th><th>Commands</th></thead>
+</table>
+</body>
+</html>
 
