Web -> Group and sort the device list for clarity.

--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -12,7 +12,7 @@ reload_device_grid();
 <h1>Pytomation Web</h1>
 Devices
 <table id='tableDevices' class='table table-striped table-bordered table-hover table-condensed'>
-<thead><th>Device name</th><th>State</th><th>Commands</th></thead>
+<thead><th>Type</th><th>Device name</th><th>State</th><th>Commands</th></thead>
 </table>
 </body>
 </html>
