--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
@@ -9,11 +10,15 @@ reload_device_grid();
 });
 </script>
 <body>
+<div class='row'>
+<div class='span11 offset1'>
 <h1>Pytomation Web</h1>
 Devices
 <table id='tableDevices' class='table table-striped table-bordered table-hover table-condensed'>
 <thead><th>Type</th><th>Device name</th><th>State</th><th>Commands</th></thead>
 </table>
+</div>
+</div>
 </body>
 </html>
 
