Make Light the default in web

--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -20,7 +20,7 @@ Devices
   <option value='all'>All</option>
   <option value='Door'>Door</option>
   <option value='Generic'>Generic</option>
-  <option value='Light'>Light</option>
+  <option selected value='Light'>Light</option>
   <option value='Location'>Location</option>
   <option value='Motion'>Motion</option>
   <option value='Photocell'>Photocell</option>
