Add web link to html page

--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -15,6 +15,7 @@ reload_device_grid();
 <div class='row'>
 <div class='span11 offset1'>
 <h1>Pytomation Web </h1>
+<a href="www.pytomation.com">www.pytomation.com</a><br><br>
 Devices
 <select name='listDevice'onchange=window.location.reload()>
   <option value='all'>All</option>
