Web Interface -> Convert non-ajax device type selection to Ajax fun and get it working on Chrome.

--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -17,7 +17,7 @@ reload_device_grid();
 <h1>Pytomation Web </h1>
 <a href="www.pytomation.com">www.pytomation.com</a><br><br>
 Devices
-<select name='listDevice'onchange=window.location.reload()>
+<select name='listDevice' onchange='reload_device_grid()'>
   <option value='all'>All</option>
   <option value='Door'>Door</option>
   <option value='Generic'>Generic</option>
