Graburns -> Change IP of thermostat to new static address.

--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -26,6 +26,7 @@ Devices
   <option value='Motion'>Motion</option>
   <option value='Photocell'>Photocell</option>
   <option value='Room'>Room</option>
+  <option value='Thermostat'>Thermostat</option>
 </select>
 <table id='tableDevices' class='table table-striped table-bordered table-hover table-condensed'>
 <thead><th>Type</th><th>Device name</th><th>State</th><th>Commands</th></thead>
