--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
 <script src="js/device_grid.js"></script>
 <script>
 $().ready(function(){
 reload_device_grid();
 });
 </script>
+
 <body>
+<div class='container'>
 <div class='row'>
-<div class='span11 offset1'>
+<div class='col-md-11 col-md-offset-1'>
 <h1>Pytomation Web </h1>
 <a href="www.pytomation.com">www.pytomation.com</a><br><br>
 Devices
