--- a/pytomation_web/mobile/index.html
+++ b/pytomation_web/mobile/index.html
@@ -23,15 +23,8 @@
         <div data-role="header">
             <h1>Home Control</h1>
             <div style="position:absolute;top:-5px;left:5px">
-            <select name='listDevice' onchange='reload_device_grid()'>
-                <option value='Door'>Door</option>
-                <option value='Generic'>Generic</option>
-                <option selected value='Light'>Light</option>
-                <option value='Location'>Location</option>
-                <option value='Motion'>Motion</option>
-                <option value='Photocell'>Photocell</option>
-                <option value='Room'>Room</option>
-                <option value='Thermostat'>Thermostat</option>
+            <select id="listDevice" name='listDevice' onchange='reload_device_grid()'>
+                <option selected value='All'>All</option>
             </select>
             </div>
             <div style="position:absolute;top:-3px;right:5px">
@@ -42,6 +35,9 @@
 
         <div id="mainContent" data-role="content">
         <!-- /content -->
+            <table id='tableDevicesLong'>
+
+            </table>
             <table id='tableDevices'>
 
             </table>
