--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<title>Pytomation Web</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8"> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -17,7 +20,7 @@ $().ready(function(){
 reload_device_grid();
 });
 </script>
-
+</head>
 <body>
 <div class='container'>
 <div class='row'>
