HomeControl -> Added "Away Server:Port" option pytomation_web/mobile -> Detects if running on server again 	This allows it to auto-connect and remove settings

--- a/pytomation_web/mobile/index.html
+++ b/pytomation_web/mobile/index.html
@@ -78,7 +78,8 @@
         <div data-role="content" >
             <form id="settingsForm">
             <p id='serverSettings'>
-               Server Name:Port <input type="text" name="serverName" id="serverName">
+               Main Server:Port <input type="text" name="serverName" id="serverName">
+               Away Server:Port <input type="text" name="serverName2" id="serverName2">
                User Name <input type="text" name="userName" id="userName">
                Password <input type="password" name="password" id="password">
             </p>
