--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -5,6 +5,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <meta name="msapplication-tap-highlight" content="no" />
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; img-src 'self' data: filesystem:; connect-src *"/>
         <link rel="stylesheet" href="css/jquery.mobile.iscrollview.css" />
         <link rel="stylesheet" href="css/jquery.mobile.iscrollview-pull.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.3.min.css"/>
